fixed api swagger
