# app/Http/Controllers/Api/CategoryController.php
@@ -1,0 +1,52 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use App\Models\Category;
+use Illuminate\Http\Request;
+
+class CategoryController extends Controller
+{
+    /**
+     * @OA\Get(
+     *     path="/api/categories",
+     *     tags={"Categories"},
+     *     summary="Получить список категорий",
+     *     @OA\Response(
+     *         response=200,
+     *         description="Список категорий",
+     *         @OA\JsonContent(type="array", @OA\Items(ref="#/components/schemas/Category"))
+     *     )
+     * )
+     */
+    public function index()
+    {
+        return Category::all();
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/categories",
+     *     tags={"Categories"},
+     *     summary="Создать категорию",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"name"},
+     *             @OA\Property(property="name", type="string", example="Комфорт")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Категория создана",
+     *         @OA\JsonContent(ref="#/components/schemas/Category")
+     *     )
+     * )
+     */
+    public function store(Request $request)
+    {
+        $category = Category::create($request->all());
+        return response()->json($category, 201);
+    }
+}
