# storage/api-docs/openapi.json
@@ -7,11 +7,8 @@
     },
     "servers": [
         {
-            "url": "http://localhost:8080",
+            "url": "http://localhost:8081",
             "description": "Local dev server"
-        },
-        {
-            "url": "/var/www/public"
         }
     ],
     "paths": {
@@ -83,6 +80,68 @@
                         "bearerAuth": []
                     }
                 ]
+            }
+        },
+        "/api/categories": {
+            "get": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Получить список категорий",
+                "operationId": "ac9c4d978ea4e5b72915ca9728e5b8b1",
+                "responses": {
+                    "200": {
+                        "description": "Список категорий",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Category"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Создать категорию",
+                "operationId": "cca49a87d9b0ebb9a98ad7c154b71737",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Комфорт"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Категория создана",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Category"
+                                }
+                            }
+                        }
+                    }
+                }
             }
         },
         "/api/ping": {
@@ -189,7 +248,9 @@
             },
             "Category": {
                 "title": "Category",
-                "description": "Категория комфорта автомобиля",
+                "required": [
+                    "name"
+                ],
                 "properties": {
                     "id": {
                         "type": "integer",
@@ -197,13 +258,7 @@
                     },
                     "name": {
                         "type": "string",
-                        "example": "Первая категория"
-                    },
-                    "car_models": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/CarModel"
-                        }
+                        "example": "Комфорт"
                     }
                 },
                 "type": "object"
@@ -233,12 +288,16 @@
     },
     "tags": [
         {
+            "name": "Health",
+            "description": "Health check endpoints"
+        },
+        {
             "name": "Cars",
             "description": "Cars"
         },
         {
-            "name": "Health",
-            "description": "Health"
+            "name": "Categories",
+            "description": "Categories"
         },
         {
             "name": "Users",
